--- a/ImageColorizerNeuralNet/ImageColorizerNeuralNet.vcxproj
+++ b/ImageColorizerNeuralNet/ImageColorizerNeuralNet.vcxproj
@@ -82,6 +82,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="imageKernel.cuh" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 11.3.targets" />
